--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,6 @@
-.weather-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
+body {
+  font-family: Arial, sans-serif;
 }
-
 h1 {
   color: #878787;
   font-size: 24px;
@@ -28,4 +23,12 @@ li {
 ul {
   margin: 0;
   padding: 0;
+}
+
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
 }
