--- a/src/style.css
+++ b/src/style.css
@@ -14,10 +14,13 @@ li {
   margin: 0;
   padding: 0;
   font-weight: 100;
-  text-transform: capitalize;
   color: rgb(135, 135, 135);
   font-size: 16px;
   line-height: 19px;
+}
+
+li::first-letter {
+  text-transform: capitalize;
 }
 
 ul {
