--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,20 @@ ul {
   border-radius: 5px;
 }
 
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
 .weather-temperature img {
   margin-right: 5px;
   height: 64px;
